# game

./: .gitignore  Cargo.toml  README.md
assets/: LDtk.ldtk  game.ldtk  hub.ldtk
assets/Puny-Characters/: Archer-Purple.png:Zone.Identifier
assets/Town/: Amory_smith_idle.aseprite  Armory.aseprite  Grass_tileset.aseprite  Smith.aseprite  fence_tileset.aseprite  hub.ldtk
assets/dungeon/: Set 3.5.gif:Zone.Identifier
assets/shaders/: health_bar.wgsl
src/: assets.rs  camera.rs  enemy.rs  events.rs  grid.rs  hubldtk.rs  input.rs  ldtk.rs  lib.rs  main.rs  movement.rs  player.rs  slime.rs  turn.rs
src/combat/: mod.rs
src/enemy/: enemy.rs  health_bar.rs  mod.rs  slime.rs
src/player/: player.rs
src/ui/: action_bar.rs  game_cursor.rs  mod.rs  player_widget.rs
src/ui/widgets/: action_bar.rs  mod.rs  player_widget.rs
