[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false


[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.23.4"
bevy_asset_loader = { version = "0.20.1", features = ["2d"] }
bevy_ecs_ldtk = { git = "https://github.com/theshortcut/bevy_ecs_ldtk/", branch = "bevy-0.13" }
iyes_perf_ui = "0.2.3"
rand = "0.8.5"

sickle_ui = { git = "https://github.com/UmbraLuminosa/sickle_ui" }


[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
