[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false


[dependencies]
bevy = { version = "0.14.2", features = ["bevy_state"] }
bevy-inspector-egui = "0.25.0"
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
#switch when https://github.com/Trouv/bevy_ecs_ldtk/pull/325 is merged
bevy_ecs_ldtk = { git = "https://github.com/MScottMcBee/bevy_ecs_ldtk", branch = "0.14" }
iyes_perf_ui = "0.3"
leafwing-input-manager = "0.14"
pathfinding = "4.10.0"
rand = "0.8.5"

sickle_ui = { git = "https://github.com/UmbraLuminosa/sickle_ui" }


#[patch.crates-io]
#bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
